fixes for sonar issues